DerivedPointerTable Update log message in wrong order in regards to Redirty Cards

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • gc
    • b21

      The DerivedPointerTable Update log message is logged inside of the Redirty/Parallel Redirty log message.

      E.g.
      [331.705s][debug][gc,phases ] GC(33) Redirty Cards: 0.5ms
      [331.705s][debug][gc,phases ] GC(33) DerivedPointerTable Update: 1.2ms
      [331.705s][trace][gc,phases ] GC(33) Parallel Redirty (ms): Min: 0.0, Avg: 0.0, Max: 0.3, Diff: 0.3, Sum: 3.2, Workers: 85
      [331.705s][trace][gc,phases ] GC(33) Redirtied Cards: Min: 0, Avg: 2311.3, Max: 22143, Diff: 22143, Sum: 196464, Workers: 85

      The Redirty messages should be together.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: