8176881: DerivedPointerTable Update log message in wrong order in regards to Redirty Cards

Reviewed-by: sjohanss, jprovino